--- a/index.html
+++ b/index.html
@@ -2,29 +2,155 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8">
-  <title>Strona w przebudowie</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Adam Fąfrowicz</title>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
+      margin: 0;
       font-family: sans-serif;
-      background-color: #f3f3f3;
-      color: #333;
+      background-color: #fff;
+    }
+    .page-header {
+      font-family: 'Playfair Display', serif;
       display: flex;
-      flex-direction: column;
+      justify-content: space-between;
+      align-items: center;
+      padding: 2rem;
+      font-size: 2.5rem;
+      background-color: #f8f8f8;
+      color: #222;
+      border-bottom: 1px solid #ddd;
+    }
+    .contact-link {
+      font-family: sans-serif;
+      font-size: 1rem;
+      text-decoration: none;
+      color: #444;
+    }
+    .contact-link:hover {
+      text-decoration: underline;
+    }
+    .video-grid {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 2rem;
+      padding: 4rem 2rem;
+      max-width: 1000px;
+      margin: 0 auto;
+    }
+    .video-thumbnail {
+      position: relative;
+      cursor: pointer;
+      background: #eee;
+      aspect-ratio: 16 / 9;
+      display: flex;
       align-items: center;
       justify-content: center;
+      border: 1px solid #ccc;
+      overflow: hidden;
+    }
+    .video-thumbnail img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+    .video-popup {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
       height: 100vh;
-      margin: 0;
+      background-color: rgba(0,0,0,0.8);
+      justify-content: center;
+      align-items: center;
+      z-index: 1000;
     }
-    h1 {
-      font-size: 2.5rem;
+    .video-popup iframe {
+      width: 90vw;
+      max-width: 800px;
+      height: 45vw;
+      max-height: 450px;
     }
-    p {
-      font-size: 1.2rem;
+    .video-popup.active {
+      display: flex;
+    }
+    .close-btn {
+      position: absolute;
+      top: 2rem;
+      right: 2rem;
+      font-size: 2rem;
+      color: white;
+      cursor: pointer;
+    }
+    @media (max-width: 600px) {
+      .page-header {
+        font-size: 2rem;
+        padding: 1.5rem;
+        flex-direction: column;
+        align-items: flex-start;
+      }
+      .contact-link {
+        margin-top: 0.5rem;
+      }
+      .video-grid {
+        grid-template-columns: 1fr;
+      }
     }
   </style>
 </head>
 <body>
-  <h1>Strona w przebudowie</h1>
-  <p>Zapraszamy ponownie już wkrótce.</p>
+  <header class="page-header">
+    <h1>Adam Fąfrowicz</h1>
+    <a href="#kontakt" class="contact-link">Kontakt</a>
+  </header>
+
+  <main>
+    <section class="video-grid">
+      <div class="video-thumbnail" data-video="https://www.youtube.com/embed/B914tq8r1vQ">
+        <img src="https://img.youtube.com/vi/B914tq8r1vQ/hqdefault.jpg" alt="Film 1">
+      </div>
+      <div class="video-thumbnail" data-video="https://www.youtube.com/embed/CwuLPZukaMA">
+        <img src="https://img.youtube.com/vi/CwuLPZukaMA/hqdefault.jpg" alt="Film 2">
+      </div>
+      <div class="video-thumbnail" data-video="https://drive.google.com/file/d/1GLO4df5TQRnP9c8uk8lC1oR_xeuN9VYu/preview">
+        <img src="https://drive.google.com/thumbnail?id=1GLO4df5TQRnP9c8uk8lC1oR_xeuN9VYu" alt="Film z Google Drive">
+      </div>
+      <div class="video-thumbnail" data-video="https://www.youtube.com/embed/tc4DutQusgc">
+        <img src="https://img.youtube.com/vi/tc4DutQusgc/hqdefault.jpg" alt="Film 4">
+      </div>
+      <div class="video-thumbnail" data-video="https://www.youtube.com/embed/hWYAkXBqaEE">
+        <img src="https://img.youtube.com/vi/hWYAkXBqaEE/hqdefault.jpg" alt="Film 5">
+      </div>
+      <div class="video-thumbnail" data-video="https://www.youtube.com/embed/TxVCHo4UJmM">
+        <img src="https://img.youtube.com/vi/TxVCHo4UJmM/hqdefault.jpg" alt="Film 6">
+      </div>
+    </section>
+  </main>
+
+  <div class="video-popup" id="videoPopup">
+    <div class="close-btn" onclick="closePopup()">&times;</div>
+    <iframe id="popupIframe" src="" frameborder="0" allowfullscreen></iframe>
+  </div>
+
+  <script>
+    const thumbnails = document.querySelectorAll('.video-thumbnail[data-video]');
+    const popup = document.getElementById('videoPopup');
+    const iframe = document.getElementById('popupIframe');
+
+    thumbnails.forEach(thumb => {
+      thumb.addEventListener('click', () => {
+        const videoUrl = thumb.getAttribute('data-video');
+        iframe.src = videoUrl;
+        popup.classList.add('active');
+      });
+    });
+
+    function closePopup() {
+      iframe.src = '';
+      popup.classList.remove('active');
+    }
+  </script>
 </body>
 </html>
