--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pl">
 <head>
@@ -54,6 +55,7 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+      transform: scale(1.01);
     }
     .video-popup {
       display: none;
@@ -115,7 +117,7 @@
         <img src="https://img.youtube.com/vi/CwuLPZukaMA/hqdefault.jpg" alt="Film 2">
       </div>
       <div class="video-thumbnail" data-video="https://drive.google.com/file/d/1GLO4df5TQRnP9c8uk8lC1oR_xeuN9VYu/preview">
-        <img src="https://drive.google.com/thumbnail?id=1GLO4df5TQRnP9c8uk8lC1oR_xeuN9VYu" alt="Film z Google Drive">
+        <img src="./cineman.jpg" alt="Film z Google Drive">
       </div>
       <div class="video-thumbnail" data-video="https://www.youtube.com/embed/tc4DutQusgc">
         <img src="https://img.youtube.com/vi/tc4DutQusgc/hqdefault.jpg" alt="Film 4">
